--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 eopl
 ====
 
-My solutions to the exercises in the book Essentials of Programming Languages,
-3rd edition.
+Some code from the book Essentials of Programming Languages, 3rd edition,
+along with my solutions to the exercises in the book.
